--- a/WebProsjekt/WB Prosjekt/test new/index.html
+++ b/WebProsjekt/WB Prosjekt/test new/index.html
@@ -25,12 +25,12 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Hjem</a></li>
-                        <li><a href="#dest">Destinasjoner</a></li>
-                        <li><a href="#contact">Kontakt</a></li>
-                        <li><a href="#reise">Reise</a></li>
-                        <li><a href="#skip">Skip</a></li>
-                        <li><a href="#tilbud">Tilbud</a></li>
+                        <li class="active"><a href="index.html">Hjem</a></li>
+                        <li><a href="dest.html">Destinasjoner</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="reise.html">Reise</a></li>
+                        <li><a href="skip.html">Skip</a></li>
+                        <li><a href="tilbud.html">Tilbud</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="./">Logg inn<span class="sr-only">loginn</span></a></li>
@@ -73,8 +73,12 @@
                     <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
                 </div>
                 <p>
-                    Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
-                    Du kan også bestille reiser under "Bestill reise" i menyen over!
+                    <ul>
+                        <li>Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.</li>
+                        <li>Se ett stort utvalg av våre destinasjoner her!</li>
+                        <li>Gå gjennom våre skip, velg din favoritt og se når er neste reise med ditt favorittskip.</li>
+                        <li>Du kan også bestille reiser under "Bestill reise" i menyen over!</li>
+                    </ul>
                 </p>
             </div>
 
@@ -83,6 +87,14 @@
                 <div class="page-header">
                     <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
                 </div>
+                    
+                        <!-- List group -->
+                        <ul class="list-group">
+                            <li class="list-group-item">Oppdatering #1</li>
+                            <li class="list-group-item">Oppdatering #2</li>
+                            <li class="list-group-item">Oppdatering #3</li>
+                        </ul>
+                   
             </div>
 
         </div>
