--- a/WebProsjekt/WB Prosjekt/test new/reise.html
+++ b/WebProsjekt/WB Prosjekt/test new/reise.html
@@ -25,12 +25,12 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Hjem</a></li>
-                        <li><a href="#dest">Destinasjoner</a></li>
-                        <li><a href="#contact">Kontakt</a></li>
-                        <li><a href="#reise">Reise</a></li>
-                        <li><a href="#skip">Skip</a></li>
-                        <li><a href="#tilbud">Tilbud</a></li>
+                        <li class="active"><a href="index.html">Hjem</a></li>
+                        <li><a href="dest.html">Destinasjoner</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="reise.html">Reise</a></li>
+                        <li><a href="skip.html">Skip</a></li>
+                        <li><a href="tilbud.html">Tilbud</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="./">Logg inn<span class="sr-only">loginn</span></a></li>
@@ -74,6 +74,8 @@
                 </div>
                 <p>
                     Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
+                    Se ett stort utvalg av våre destinasjoner her!
+                    Gå gjennom våre skip, velg din favoritt og se når er neste reise med ditt favorittskip.
                     Du kan også bestille reiser under "Bestill reise" i menyen over!
                 </p>
             </div>
