--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -1,37 +1,96 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <title></title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/slider.css" />
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
     <body>
-        <div class="imghead"><br><p>Cruisetastic</p></div>
-        <div class="container spacer">
-        <ul class="nav nav-tabs">
-            <li role="presentation"><a href="index.html">Hjemme</a></li>
-            <li role="presentation"><a href="reise.html">Bestill reise</a></li>
-            <li role="presentation"><a href="tilbud.html">Tilbud</a></li>
-            <li role="presentation" class="active"><a href="skip.html">Våre skip</a></li>
-            <li role="presentation"><a href="dest.html">Destinasjoner</a></li>
-            <li role="presentation"><a href="kontakt.html">Kontakt oss</a></li>
-        </ul>
-        </div>
 
-        <div class="tab-content">
-           
-
-            <p>GODERTNE ME SÅNNDRE GREIER Å TING OLOLOLOLOLOLOLOLOLOLOLOLOLG REISER <br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            Kjøp her!</p>
-           
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Cruisetastic</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="index.html">Hjem</a></li>
+                        <li><a href="dest.html">Destinasjoner</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="reise.html">Reise</a></li>
+                        <li><a href="skip.html">Skip</a></li>
+                        <li><a href="tilbud.html">Tilbud</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="./">Logg inn<span class="sr-only">loginn</span></a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
             </div>
-        <div id="footer">
-        <p>Cruisetastic AS</p>
+        </nav>
+
+        <div id="captioned-gallery">
+            <figure class="slider">
+                <figure>
+                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                    <figcaption>img1</figcaption>
+                </figure>
+                <figure>
+                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                    <figcaption>img2</figcaption>
+                </figure>
+                <figure>
+                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                    <figcaption>img3</figcaption>
+                </figure>
+                <figure>
+                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                    <figcaption>img4</figcaption>
+                </figure>
+                <figure>
+                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                    <figcaption>img5</figcaption>
+                </figure>
+            </figure>
         </div>
 
+        <!--Content Index-->
+
+        <div class="content-container">
+
+            <div class="content-left col-md-8">
+                <div class="page-header">
+                    <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
+                </div>
+                <p>
+                    Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
+                    Du kan også bestille reiser under "Bestill reise" i menyen over!
+                </p>
+            </div>
+
+            <div class="content-right col-md-4">
+                <!--Legg til siste nytt for siden-->
+                <div class="page-header">
+                    <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
+                </div>
+            </div>
+
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">Cruisetastic &copy;</p>
+            </div>
+        </footer>
     </body>
 </html>
