--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -6,6 +6,7 @@
         <title></title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/slider.css" />
+        <link rel="stylesheet" type="text/css" href="css/bestilform.css" />
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -70,12 +71,11 @@
 
             <div class="content-left col-md-8">
                 <div class="page-header">
-                    <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
+                    <h2>Se hvilke destinasjoner vi tilbyr <small> - alt fra små til store peniser</small></h2>
                 </div>
-                <p>
-                    Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
-                    Du kan også bestille reiser under "Bestill reise" i menyen over!
-                </p>
+               
+
+
             </div>
 
             <div class="content-right col-md-4">
