--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -25,10 +25,10 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Hjem</a></li>
+                        <li><a href="index.html">Hjem</a></li>
                         <li><a href="dest.html">Destinasjoner</a></li>
-                        <li><a href="kontakt.html">Kontakt</a></li>
-                        <li><a href="reise.html">Reise</a></li>
+                        <li class="active"><a href="kontakt.html">Kontakt</a></li>
+                        <li><a href="reise.html">Bestill reise</a></li>
                         <li><a href="skip.html">Skip</a></li>
                         <li><a href="tilbud.html">Tilbud</a></li>
                     </ul>
@@ -70,11 +70,12 @@
 
             <div class="content-left col-md-8">
                 <div class="page-header">
-                    <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
+                    <h2>Kontakt Oss <small> </small></h2>
                 </div>
                 <p>
-                    Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
-                    Du kan også bestille reiser under "Bestill reise" i menyen over!
+                    <img src="telefon.png" height="3%" width="3%"> 815 493 00 (Hverdager: 09.00 - 17.00) 
+                    <br /> <br />
+                    <img src="mail.svg" height="3%" width="3%"/> cruisetastic@cruise.no
                 </p>
             </div>
 
@@ -83,6 +84,16 @@
                 <div class="page-header">
                     <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
                 </div>
+
+                <!-- List group -->
+                <ul class="list-group">
+                    <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
+                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                    <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
+
+                   
+                </ul>
+
             </div>
 
         </div>
