--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -74,8 +74,11 @@
                     <h2>Se hvilke destinasjoner vi tilbyr <small> - alt fra små til store peniser</small></h2>
                 </div>
                
+                <img src="img/carribien.jpg" alt="..." class="img-rounded">
 
-
+                <div class="page-header">
+                    <small>Lorem ipsum m</small>
+                </div>
             </div>
 
             <div class="content-right col-md-4">
