--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -22,12 +22,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Cruisetastic</a>
+                    <a class="navbar-brand" href="index.html">Cruisetastic</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Hjem</a></li>
-                        <li><a href="dest.html">Destinasjoner</a></li>
+                        <li class="active"><a href="dest.html">Destinasjoner</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
                         <li><a href="reise.html">Reise</a></li>
                         <li><a href="skip.html">Skip</a></li>
@@ -77,8 +76,28 @@
                 <img src="img/carribien.jpg" alt="..." class="img-rounded">
 
                 <div class="page-header">
-                    <small>Lorem ipsum m</small>
+                    <small>Lorem ipsum carribien kålrabi penis</small>
                 </div>
+
+                <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+                <div class="page-header">
+                    <small>Lorem ipsum carribien kålrabi penis</small>
+                </div>
+
+                <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+                <div class="page-header">
+                    <small>Lorem ipsum carribien kålrabi penis</small>
+                </div>
+
+                <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+                <div class="page-header">
+                    <small>Lorem ipsum carribien kålrabi penis</small>
+                </div>
+
+
             </div>
 
             <div class="content-right col-md-4">
