--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -73,9 +73,9 @@
                     <h2>Kontakt Oss <small> </small></h2>
                 </div>
                 <p>
-                    <img src="telefon.png" height="3%" width="3%"> 815 493 00 (Hverdager: 09.00 - 17.00) 
+                    <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 815 493 00 (Hverdager: 09.00 - 17.00) 
                     <br /> <br />
-                    <img src="mail.svg" height="3%" width="3%"/> cruisetastic@cruise.no
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> cruisetastic@cruise.no
                 </p>
             </div>
 
