--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -70,10 +70,17 @@
                     <h2>Kontakt Oss <small> </small></h2>
                 </div>
                 <p>
-                    <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 815 493 00 (Hverdager: 09.00 - 17.00) 
+                    <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 815 493 00 (Hverdager: 09.00 - 17.00)
                     <br /> <br />
                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> cruisetastic@cruise.no
+                    <br /><br />
+                    <br />
+                    <img src="kaptein.jpg" height="25%" width="25%" />
+                    <br /><br />Kaptein Trond til tjeneste!
+                    <br /><br /><br /><br /><br /><br /><br /><br /> 
+                
                 </p>
+               
             </div>
 
             <div class="content-right col-md-4">
