--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -11,108 +11,126 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
-    <body>
+<body>
 
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html">Cruisetastic</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="dest.html">Destinasjoner</a></li>
-                        <li><a href="kontakt.html">Kontakt</a></li>
-                        <li><a href="reise.html">Reise</a></li>
-                        <li><a href="skip.html">Skip</a></li>
-                        <li><a href="tilbud.html">Tilbud</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="./">Logg inn<span class="sr-only">loginn</span></a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Cruisetastic</a>
             </div>
-        </nav>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="dest.html">Destinasjoner</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                    <li><a href="reise.html">Bestill reise</a></li>
+                    <li><a href="skip.html">Skip</a></li>
+                    <li><a href="tilbud.html">Tilbud</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
 
-        <div id="captioned-gallery">
-            <figure class="slider">
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img1</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img2</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img3</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img4</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img5</figcaption>
-                </figure>
+    <div id="captioned-gallery">
+        <figure class="slider">
+            <figure>
+                <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                <figcaption>img1</figcaption>
             </figure>
+            <figure>
+                <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                <figcaption>img2</figcaption>
+            </figure>
+            <figure>
+                <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                <figcaption>img3</figcaption>
+            </figure>
+            <figure>
+                <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                <figcaption>img4</figcaption>
+            </figure>
+            <figure>
+                <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
+                <figcaption>img5</figcaption>
+            </figure>
+        </figure>
+    </div>
+
+    <!--Content Index-->
+
+    <div class="content-container">
+
+        <div class="content-left col-md-8">
+            <div class="page-header">
+                <h2>Se hvilke destinasjoner vi tilbyr <small> - Destinasjoner for store og små.</small></h2>
+            </div>
+
+            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+            <div class="page-header">
+                <h3>
+                    Cruise i Karibia <small>
+                        er en perfekt reiseform hvis du vil oppleve så
+                        mye som mulig i ferien din. Karibia er akkurat så eksotisk som man
+                        forestiller seg – vaiende palmer, fengende rytmer, turkisblått hav,
+                        fascinerende øyer, smilende mennesker og spennende reisemål.
+                        Og ikke minst sol, badeliv og lange paradisstrender.
+                        Her har du med andre ord alle muligheter til både avslapning og eventyr.
+
+                        Velger du å reise på cruise i Karibia er det flere ruter og reiselengder
+                        å velge mellom. Velg det cruiset som passer deg best. Med Vings praktiske
+                        pakkeløsninger får du alt servert – fly, hotellovernattinger og cruise.
+                        I Karibia har Royal Caribbean International et stort utvalg av ruter,
+                        og her kan du velge mellom noen av verdens største cruiseskip – Oasis of the Seas,
+                        Allure of the Seas og nybygde Quantum of the Seas.
+                        Også Celebrity Cruises har et bredt utvalg av cruise i området,
+                        og besøker flere spennende havner og øyer som for eksempel Jamaica, Puerto Rico,
+                        St. Martin/St. Maarten og Bahamas. Fra vinteren 2015/16 kan du også dra på cruise
+                        med familievennlige og prisbelønte Costa Cruises i Karibia. Skipene til Costa Cruises
+                        besøker havner og steder i blant annet Mexico, Den dominikanske republikk og Caymanøyene.
+                    </small>
+                </h3>
+            </div>
+
+            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+            <div class="page-header">
+                <small>Lorem ipsum carribien kålrabi penis</small>
+            </div>
+
+            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+            <div class="page-header">
+                <small>Lorem ipsum carribien kålrabi penis</small>
+            </div>
+
+            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+
+            <div class="page-header">
+                <small>Lorem ipsum carribien kålrabi penis</small>
+            </div>
+
+
         </div>
 
-        <!--Content Index-->
-
-        <div class="content-container">
-
-            <div class="content-left col-md-8">
-                <div class="page-header">
-                    <h2>Se hvilke destinasjoner vi tilbyr <small> - alt fra små til store peniser</small></h2>
-                </div>
-               
-                <img src="img/carribien.jpg" alt="..." class="img-rounded">
-
-                <div class="page-header">
-                    <small>Lorem ipsum carribien kålrabi penis</small>
-                </div>
-
-                <img src="img/carribien.jpg" alt="..." class="img-rounded">
-
-                <div class="page-header">
-                    <small>Lorem ipsum carribien kålrabi penis</small>
-                </div>
-
-                <img src="img/carribien.jpg" alt="..." class="img-rounded">
-
-                <div class="page-header">
-                    <small>Lorem ipsum carribien kålrabi penis</small>
-                </div>
-
-                <img src="img/carribien.jpg" alt="..." class="img-rounded">
-
-                <div class="page-header">
-                    <small>Lorem ipsum carribien kålrabi penis</small>
-                </div>
-
-
+        <div class="content-right col-md-4">
+            <!--Legg til siste nytt for siden-->
+            <div class="page-header">
+                <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
             </div>
-
-            <div class="content-right col-md-4">
-                <!--Legg til siste nytt for siden-->
-                <div class="page-header">
-                    <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
-                </div>
-            </div>
-
         </div>
 
-        <footer class="footer">
-            <div class="container">
-                <p class="text-muted">Cruisetastic &copy;</p>
-            </div>
-        </footer>
-    </body>
+    </div>
+
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">Cruisetastic &copy;</p>
+        </div>
+    </footer>
+</body>
 </html>
