--- a/WebProsjekt/WB Prosjekt/index.html
+++ b/WebProsjekt/WB Prosjekt/index.html
@@ -89,9 +89,10 @@
                     
                         <!-- List group -->
                         <ul class="list-group">
-                            <li class="list-group-item">Oppdatering #1</li>
-                            <li class="list-group-item">Oppdatering #2</li>
-                            <li class="list-group-item">Oppdatering #3</li>
+                            <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
+                            <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                            <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
+
                         </ul>
                    
             </div>
