--- a/WebProsjekt/WB Prosjekt/tilbud.html
+++ b/WebProsjekt/WB Prosjekt/tilbud.html
@@ -28,7 +28,7 @@
                       
                         <li><a href="dest.html">Destinasjoner</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
-                        <li><a href="reise.html">Bestille reise</a></li>
+                        <li><a href="reise.html">Bestill reise</a></li>
                         <li><a href="skip.html">Skip</a></li>
                         <li class="active"><a href="tilbud.html">Tilbud</a></li>
                     </ul>
