--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -123,10 +123,11 @@
             <div class="page-header">
                 <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
             </div>
-            <ul><li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
-<li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
-<li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
-</ul>
+            <ul>
+                <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
+                <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
+            </ul>
         </div>
 
     </div>
