--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -75,7 +75,7 @@
                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> cruisetastic@cruise.no
                     <br /><br />
                     <br />
-                    <img src="kaptein.jpg" height="25%" width="25%" />
+                    <img src="kaptein.jpg" height="25%" width="25%" class="img-rounded" />
                     <br /><br />Kaptein Trond til tjeneste!
                     <br /><br /><br /><br /><br /><br /><br /><br /> 
                 
