--- a/WebProsjekt/WB Prosjekt/tilbud.html
+++ b/WebProsjekt/WB Prosjekt/tilbud.html
@@ -68,11 +68,10 @@
 
             <div class="content-left col-md-8">
                 <div class="page-header">
-                    <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
+                    <h2>Våre tilbud <small> - reiser for litt mindre</small></h2>
                 </div>
                 <p>
-                    Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
-                    Du kan også bestille reiser under "Bestill reise" i menyen over!
+                    Våre tilbud gir deg gode opplevelser for litt mindre penger
                 </p>
             </div>
 
@@ -83,9 +82,9 @@
                 </div>
                 <ul>
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
-<li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
-<li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
-</ul>
+                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                    <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
+                </ul>
             </div>
 
         </div>
