--- a/WebProsjekt/WB Prosjekt/tilbud.html
+++ b/WebProsjekt/WB Prosjekt/tilbud.html
@@ -72,7 +72,11 @@
                 </div>
                 <p>
                     Våre tilbud gir deg gode opplevelser for litt mindre penger
+
+
                 </p>
+                <img src="img/carribien.jpg" alt="..." class="img-rounded">
+                <p>For 13 497,- kommer du på 14 dagerscruise til karibien</p>
             </div>
 
             <div class="content-right col-md-4">
