--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -6,7 +6,6 @@
         <title></title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/slider.css" />
-        <link rel="stylesheet" type="text/css" href="css/bestilform.css" />
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -70,7 +69,7 @@
                 <h2>Se hvilke destinasjoner vi tilbyr <small> - Destinasjoner for store og små.</small></h2>
             </div>
 
-            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+            <img src="img/carribien.jpg" width="566" height="353" alt="..." class="img-rounded">
 
             <div class="page-header">
                 <h3>
@@ -97,13 +96,32 @@
                 </h3>
             </div>
 
-            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+            <img src="img/dubai.jpg" width="566" height="353" alt="..." class="img-rounded">
 
             <div class="page-header">
-                <small>Lorem ipsum carribien kålrabi penis</small>
+                <h3>
+                    Cruise Dubai<small>
+                        Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
+                        Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
+                        Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
+                        det ene reisemålet mer spektakulært enn det andre.
+                        Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
+                        strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
+                        Her finnes innendørs skianlegg, tradisjonelle markeder, fantastiske hotell og verdens
+                        høyeste bygning, Burj Khalifa, blant mye, mye annet.
+
+                        Med Vings enkle pakkeløsninger får du alt servert – fly, hotellovernatting i avreisebyen
+                        og cruise. Reis på cruise med Royal Caribbean Internationals store og familievennlige
+                        skip eller et av Costa Cruises familievennlige og prisbelønte skip og nyt god mat og
+                        aktiviteter om bord. Reiser du med Royal Caribbean International eller Celebrity Cruises
+                        er tips inkludert i pakkeprisen, ca. 12 USD/dag.
+                        Reiser du med Costa Cruises blir den daglige obligatoriske tipsen på ca. 9 euro pr. voksen
+                        og 4,50 euro pr. barn lagt til prisen. Pristillegget betales om bord.
+                    </small>
+                </h3>
             </div>
 
-            <img src="img/carribien.jpg" alt="..." class="img-rounded">
+            <img src="img/dubai.jpg" width="566" height="353" alt="..." class="img-rounded">
 
             <div class="page-header">
                 <small>Lorem ipsum carribien kålrabi penis</small>
