--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -66,7 +66,7 @@
 
         <div class="content-container">
 
-            <div class="content-left col-md-8">
+            <div class="fuckface">
                <div class="form">
                    <link rel="stylesheet" href="form/formoid-metro-cyan.css" type="text/css" />
                    <script type="text/javascript" src="form/jquery.min.js"></script>
@@ -102,19 +102,7 @@
                </div>
             </div>
 
-            <div class="content-right col-md-4">
-                <!--Legg til siste nytt for siden-->
-                <div class="page-header">
-                    <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
-                </div>
-
-                <ul><li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
-<li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
-<li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
-</ul>
-            </div>
-
-        </div>
+  
 
         <footer class="footer">
             <div class="container">
