--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -101,6 +101,7 @@
                    <script type="text/javascript" src="form/formoid-metro-cyan.js"></script>
                </div>
             </div>
+            </div>
 
   
 
