--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -1,15 +1,16 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="stylesheet" type="text/css" href="css/slider.css" />
-        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/slider.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</head>
 <body>
 
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -73,27 +74,20 @@
 
             <div class="page-header">
                 <h3>
-                    Cruise i Karibia <small>
-                        er en perfekt reiseform hvis du vil oppleve så
-                        mye som mulig i ferien din. Karibia er akkurat så eksotisk som man
-                        forestiller seg – vaiende palmer, fengende rytmer, turkisblått hav,
-                        fascinerende øyer, smilende mennesker og spennende reisemål.
-                        Og ikke minst sol, badeliv og lange paradisstrender.
-                        Her har du med andre ord alle muligheter til både avslapning og eventyr.
-
-                        Velger du å reise på cruise i Karibia er det flere ruter og reiselengder
-                        å velge mellom. Velg det cruiset som passer deg best. Med Vings praktiske
-                        pakkeløsninger får du alt servert – fly, hotellovernattinger og cruise.
-                        I Karibia har Royal Caribbean International et stort utvalg av ruter,
-                        og her kan du velge mellom noen av verdens største cruiseskip – Oasis of the Seas,
-                        Allure of the Seas og nybygde Quantum of the Seas.
-                        Også Celebrity Cruises har et bredt utvalg av cruise i området,
-                        og besøker flere spennende havner og øyer som for eksempel Jamaica, Puerto Rico,
-                        St. Martin/St. Maarten og Bahamas. Fra vinteren 2015/16 kan du også dra på cruise
-                        med familievennlige og prisbelønte Costa Cruises i Karibia. Skipene til Costa Cruises
-                        besøker havner og steder i blant annet Mexico, Den dominikanske republikk og Caymanøyene.
-                    </small>
+                    Cruise i Karibia
+                    <br />
+                    <small>12 dagers intens cruising for alle aldersgrupper.</small>
+                    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        Les mere her.
+                    </a>
                 </h3>
+
+                <div class="collapse" id="collapseExample">
+                    <div class="well">
+                        trolololololololololo
+                    </div>
+                </div>
+
             </div>
 
             <img src="img/dubai.jpg" width="566" height="353" alt="..." class="img-rounded">
@@ -135,20 +129,21 @@
 
 
         </div>
+        
 
-        <div class="content-right col-md-4">
-            <!--Legg til siste nytt for siden-->
-            <div class="page-header">
-                <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
+            <div class="content-right col-md-4">
+                <!--Legg til siste nytt for siden-->
+                <div class="page-header">
+                    <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
+                </div>
+                <ul>
+                    <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
+                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                    <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
+                </ul>
             </div>
-            <ul>
-                <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
-                <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
-                <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
-            </ul>
-        </div>
 
-    </div>
+        </div>
 
     <footer class="footer">
         <div class="container">
